# pytropd

./: .gitignore  README  README.md  functions.py  pyproject.toml  setup.py  tropd.yml
.github/workflows/: test.yml
pytropd/: TropD_Example_Calculations.py  __init__.py  functions.py  metrics.py  pygeode_metrics.py  tutorial.py  xarray_metrics.py  xr_tutorial.ipynb  xrtest.py
pytropd.egg-info/: PKG-INFO  SOURCES.txt
pytropd/docs/source/: conf.py
testing/: test_functions.py
