[tool.poetry]
name = "pytropd"
version = "1.0.5"
description = "Calculation of metrics of tropical width"
authors = ["Alison Ming, Paul William Staten, Samuel Smith"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.9"
scipy = "^1.8.0"
numpy = "^1.22.3"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
